# llm-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/analytics/: langfuse.py
app/api/: auth.py
app/api/internal/: admin.py  kb.py
app/api/v1/: chat.py  health.py  messages.py  models.py
app/core/: auth.py  content_policy.py  exceptions.py  rate_limiter.py
app/db/: engine.py  models.py
app/db/repositories/: usage.py  users.py
app/llm/: client.py
app/metrics/: prometheus.py
app/pii/: regex_patterns.py  restorer.py  scrubber.py
app/rag/: embedder.py  ingestion.py  retriever.py  vector_store.py
app/schemas/: anthropic.py  openai.py
config/: config.yaml
docker/: docker-compose.yml  prometheus.yml
scripts/: create_api_key.py  ingest_kb.py
tests/: conftest.py
tests/test_core/: test_rate_limiter.py
tests/test_pii/: test_scrubber.py
